<resources>
    <string name="app_name">Miscebook</string>
    <string name="welcome_to_miscebook">Welcome To Miscebook</string>
    <string name="user_name">Username</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register Here</string>
    <string name="todo">todo</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions.</string>
    <string name="exit_text">Are you sure you want to Exit ?</string>
    <string name="decline">Cancel</string>
    <string name="accept">OK</string>
    <string name="name">Name</string>
    <string name="title_activity_map">Map</string>
    <string name="btn_persistent">Persistent Bottom Sheet</string>
    <string name="btn_modal">Modal Bottom Sheet</string>
    <string name="tv_title">Learn Bottom Sheet</string>
    <string name="tv_description">
        A BottomSheet is a component that is used to display some information by sliding
        the view up in the screen and also you can hide this BottomSheet when the message
        is conveyed to the users. This is a nice way of conveying some message or performing
        some task in Android. Types of BottomSheet \n\nA BottomSheet is of two types: \n\nPersistent BottomSheet \n\nModal BottomSheet</string>
    <string name="btn_one">Button 1</string>
    <string name="btn_two">Button 2</string>
    <string name="btn_three">Button 3</string>
    <string name="book_futsal">Book Futsal</string>
    <string name="futsal_name">Futsal Name</string>
    <string name="futsal_address">Futsal Address</string>
    <string name="futsal_price">Futsal Price</string>
    <string name="futsal_description">Futsal Description</string>
    <string name="futsal_phone">Futsal Phone</string>
    <string name="futsal_pitch_condition">Futsal Pitch Condition</string>
    <string name="futsal_venue_condition">Futsal Venue Condition</string>
    <string name="futsal_email">Futsal Email</string>
    <string name="futsal_booking">Futsal Booking</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="menu">Menu</string>
    <string name="map">Map</string>
    <string name="favorite">Favorite</string>
    <string name="date">Date</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="number_of_players">Number of players</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="support">Support</string>
    <string name="your_profile">Your Profile</string>
    <string name="hi_user">Hi User</string>
    <string name="find_your_sporting_venue">Find Your Sporting Venue</string>
    <string name="more">More</string>
    <string name="share_our_app">Share our App</string>
    <string name="logout">Logout</string>
</resources>